--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.7.3'
+    id 'org.springframework.boot' version '2.6.8'
     id 'io.spring.dependency-management' version '1.0.13.RELEASE'
     id 'java'
 }
@@ -32,10 +32,12 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 /*    implementation("org.mariadb.jdbc:mariadb-java-client") */
     implementation('com.h2database:h2')
-
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
 /*    implementation('org.springframework.boot:spring-boot-starter-oauth2-client') // 권한 관련
     implementation('org.springframework.session:spring-session-jdbc') // 권한 관련*/
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation("org.springframework.security:spring-security-test") // 권한 관련
+
+    compileOnly 'org.springframework.boot:spring-boot-starter-mustache'
 }
